[gd_scene load_steps=5 format=3 uid="uid://cxxmq32l3eqdc"]

[ext_resource type="Script" uid="uid://bghh04b4233tm" path="res://screens/login_register_menu/login_register_menu.gd" id="1_j2l08"]
[ext_resource type="PackedScene" uid="uid://c63ax2yyiebwr" path="res://screens/login_register_menu/pop_ups/log_reg_pop_ups/login_pop_up/login_pop_up.tscn" id="2_rback"]
[ext_resource type="PackedScene" uid="uid://b1q1dc6ig3yxq" path="res://screens/login_register_menu/pop_ups/log_reg_pop_ups/register_pop_up/register_pop_up.tscn" id="3_dab4l"]
[ext_resource type="PackedScene" uid="uid://p7k7vox8gi2a" path="res://screens/login_register_menu/pop_ups/select_user_pop_up/select_user_pop_up.tscn" id="4_6hi4e"]

[node name="LoginRegisterMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2l08")

[node name="WelcomeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 730.0
offset_top = 148.0
offset_right = 930.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 65
text = "Welcome"

[node name="GotoPopUpBtns" type="Control" parent="."]
anchors_preset = 0
offset_left = 790.0
offset_top = 523.0
offset_right = 847.0
offset_bottom = 563.0

[node name="GotoLoginBtn" type="Button" parent="GotoPopUpBtns"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 65
text = "Login"

[node name="GotoRegisterBtn" type="Button" parent="GotoPopUpBtns"]
layout_mode = 0
offset_left = 238.0
offset_top = -2.00001
offset_right = 502.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 65
text = "Register"

[node name="GotoSelectUserBtn" type="Button" parent="GotoPopUpBtns"]
layout_mode = 0
offset_left = -357.0
offset_top = 11.0
offset_right = -54.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 55
text = "Select User"

[node name="GotoMenuBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 719.0
offset_top = 812.0
offset_right = 1067.0
offset_bottom = 911.0
theme_override_font_sizes/font_size = 65
text = "goto menu"

[node name="PopUps" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="LoginPopUp" parent="PopUps" instance=ExtResource("2_rback")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="RegisterPopUp" parent="PopUps" instance=ExtResource("3_dab4l")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SelectUserPopUp" parent="PopUps" instance=ExtResource("4_6hi4e")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="GoBackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 810.0
offset_right = 372.0
offset_bottom = 991.0
theme_override_font_sizes/font_size = 50
text = "GoBAck"

[connection signal="pressed" from="GotoPopUpBtns/GotoLoginBtn" to="." method="_on_goto_login_btn_pressed"]
[connection signal="pressed" from="GotoPopUpBtns/GotoRegisterBtn" to="." method="_on_goto_register_btn_pressed"]
[connection signal="pressed" from="GotoPopUpBtns/GotoSelectUserBtn" to="." method="_on_goto_select_user_btn_pressed"]
[connection signal="pressed" from="GotoMenuBtn" to="." method="_on_goto_menu_btn_pressed"]
[connection signal="pressed" from="GoBackBtn" to="." method="_on_go_back_btn_pressed"]
